--- a/funnvpn.conf
+++ b/funnvpn.conf
@@ -1,62 +1,61 @@
 server {
         listen 81;
         listen [::]:81;
-        server_name 127.0.01;
-        return 301 https://127.0.0.1;
+        server_name tker.ml;
+        return 301 https://tker.ml;
 }
-
 server {
                 listen 127.0.0.1:31300;
-                server_name _;
+                server_name tker.ml;
                 return 403;
 }
 server {
         listen 127.0.0.1:31302 http2;
-        server_name _;
+        server_name tker.ml;
         root /usr/share/nginx/html;
-
-    grpc_read_timeout 1h;
-    grpc_send_timeout 1h;
-    grpc_set_header X-Real-IP $remote_addr;
-
-    location /trojan-grpc {
-        if ($request_method != "POST") {
-            return 404;
+        location /s/ {
+                add_header Content-Type text/plain;
+                alias /etc/v2ray-agent/subscribe/;
+       }
+        location /vless-grpc {
+                client_max_body_size 0;
+                keepalive_requests 4294967296;
+                client_body_timeout 1071906480m;
+                send_timeout 1071906480m;
+                lingering_close always;
+                grpc_read_timeout 1071906480m;
+                grpc_send_timeout 1071906480m;
+                grpc_pass grpc://127.0.0.1:31301;
         }
-        client_body_buffer_size 1m;
-        client_body_timeout 1h;
-        client_max_body_size 0;
-        grpc_pass grpc://127.0.0.1:31304;
-
-    }
-
-    location /vless-grpc {
-        if ($request_method != "POST") {
-            return 404;
+        location /trojan-grpc {
+                client_max_body_size 0;
+                keepalive_requests 4294967296;
+                client_body_timeout 1071906480m;
+                send_timeout 1071906480m;
+                lingering_close always;
+                grpc_read_timeout 1071906480m;
+                grpc_send_timeout 1071906480m;
+                grpc_pass grpc://127.0.0.1:31304;
         }
-        client_body_buffer_size 1m;
-        client_body_timeout 1h;
-        client_max_body_size 0;
-        grpc_pass grpc://127.0.0.1:31301;
-
-    }
-
-    location /vmess-grpc {
-        if ($request_method != "POST") {
-            return 404;
+        location /vmess-grpc {
+                client_max_body_size 0;
+                keepalive_requests 4294967296;
+                client_body_timeout 1071906480m;
+                send_timeout 1071906480m;
+                lingering_close always;
+                grpc_read_timeout 1071906480m;
+                grpc_send_timeout 1071906480m;
+                grpc_pass grpc://127.0.0.1:31303;
         }
-        client_body_buffer_size 1m;
-        client_body_timeout 1h;
-        client_max_body_size 0;
-        grpc_pass grpc://127.0.0.1:31303;
-
-    }
 }
 server {
         listen 127.0.0.1:31300;
-        server_name _;
+        server_name tker.ml;
         root /usr/share/nginx/html;
-
+        location /s/ {
+                add_header Content-Type text/plain;
+                alias /etc/v2ray-agent/subscribe/;
+        }
         location / {
                 add_header Strict-Transport-Security "max-age=15552000; preload" always;
         }
